# LLM-EvalSys

./: LICENSE  README.md  pyproject.toml
src/: __main__.py
src/data/: excel_processor.py  excel_to_json.py  storage.py
src/evaluation/: evaluator.py  json_validator.py  metrics.py  workflow.py
src/generation/: response_generator.py
src/utils/: config.py  logging.py
