[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_evaluation"
version = "0.1.0"
description = "LLM Response evaluation workflow"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.10.0",
]

[project.scripts]
llm-evaluate = "src.evaluation.workflow:main"

[tool.black]
line-length = 100
target-version = ["py310", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false 